今日の作業

--- a/Register/register.html
+++ b/Register/register.html
@@ -12,11 +12,12 @@
 </head>
 <body>
     <div class="register_box">
-        <header>
+        <header>            
             <h2>Register</h2>
+            <img src="/Login/images/2.jpg" alt="Banner" class="register-banner">
         </header>
         
-        <form action="/register/process">
+        <form action="/register/process" method="post">
             
             <div class="input">
                 <input type="username" name="username" placeholder="UserName" required><br>
